--- a/src/index.css
+++ b/src/index.css
@@ -15,9 +15,26 @@ body {
         "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    margin: 0 20%;
 }
 
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
         monospace;
+}
+
+h2 {
+    font-size: 1rem;
+    color: rgb(56, 56, 56);
+}
+
+h1 {
+    font-size: 1.5rem;
+    color: rgb(56, 56, 56);
+    line-height: 2.5rem;
+    margin: 2rem 0;
+}
+
+a {
+    color: rgb(56, 56, 56);
 }
